--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.39.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
