--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "gatsby": "^3.13.0",
     "gatsby-plugin-sass": "^4.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.39.0"
