--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.13.0",
     "gatsby-plugin-sass": "^4.13.0",
     "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-remark": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.39.0"
