--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   },
   "dependencies": {
     "gatsby": "^3.13.0",
-    "gatsby-plugin-sass": "^4.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-remark": "^4.10.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.39.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
